--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="/Volumes/apple/前端課程/The Complete JavaScript Course 2019 Build Real Projects!/EX/budgety/style.css">
+        <link type="text/css" rel="stylesheet" href="style.css">
         <title>Budgety</title>
     </head>
     <body>
@@ -119,6 +119,6 @@
             
         </div>
         
-        <script src="/Volumes/apple/前端課程/The Complete JavaScript Course 2019 Build Real Projects!/EX/budgety/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
